# SwitchHosts

./: .gitignore  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: sync-tauri-version.mjs
src/: version.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_menu.rs  commands.rs  find.rs  http.rs  http_api.rs  import_export.rs  lib.rs  lifecycle.rs  refresh.rs
src-tauri/src/hosts_apply/: aggregate.rs  cmd_runner.rs  elevation.rs  error.rs  history.rs  mod.rs  write.rs
src-tauri/src/migration/: archiver.rs  mod.rs  potdb.rs
src-tauri/src/storage/: atomic.rs  config.rs  entries.rs  error.rs  manifest.rs  mod.rs  paths.rs  state.rs  trashcan.rs
src/common/: data.d.ts
src/common/i18n/languages/: en.ts  zh-hant.ts  zh.ts
src/main/: main.ts
src/main/http/: index.ts
src/renderer/components/: EditHostsInfo.tsx
src/renderer/components/List/: ListItem.module.scss  ListItem.tsx
src/renderer/core/: agent.ts
v5plan/: switchhosts-v5-implementation-notes.md
