[package]
name = "switchhosts"
version = "4.3.0"
description = "A GUI tool for managing your hosts file."
authors = ["oldj"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "switchhosts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
thiserror = "1"
log = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
